change makefiles to add splendid metadata

--- a/makefiles/Makefile.common
+++ b/makefiles/Makefile.common
@@ -1,8 +1,12 @@
+SPLENDID_OPTIONS=-noelle-generate-splendid-input
+
 all: baseline_parallelized.bc
 
 baseline_parallelized.bc:
 	./runEnablers.sh $(BENCHMARK) $(BENCHMARK).bc $(PROFILE_INPUT) "$(LIBS)" $(NOELLE_OPTIONS)
-	noelle-parallelizer baseline_with_metadata.bc -o $@ $(NOELLE_OPTIONS) $(PARALLELIZATION_OPTIONS)
+	#noelle-parallelizer baseline_with_metadata.bc -o $@ $(NOELLE_OPTIONS) $(PARALLELIZATION_OPTIONS)
+	noelle-parallelizer-splendid baseline_with_metadata.bc -o $@ $(NOELLE_OPTIONS) $(PARALLELIZATION_OPTIONS) $(SPLENDID_OPTIONS)
+	opt -globaldce -instcombine $@ -o $@
 	cp $@ $(BENCHMARK).bc
 
 clean:
